WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156545
REGRESSION (
r199401
): Internal builds of Safari hang on launch
https://bugs.webkit.org/show_bug.cgi?id=156545
Summary
REGRESSION (r199401): Internal builds of Safari hang on launch
Daniel Bates
Reported
2016-04-13 10:23:54 PDT
Temporarily ignore SecCodeCopyGuestWithAttributes() failure to fix the hang. I fill follow up with a long term fix shortly.
Attachments
Patch
(2.74 KB, patch)
2016-04-13 10:32 PDT
,
Daniel Bates
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-04-13 10:24:17 PDT
<
rdar://problem/25697779
>
Daniel Bates
Comment 2
2016-04-13 10:32:22 PDT
Created
attachment 276332
[details]
Patch
Anders Carlsson
Comment 3
2016-04-13 10:46:11 PDT
Comment on
attachment 276332
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276332&action=review
> Source/WebKit2/Shared/mac/CodeSigning.mm:101 > + RetainPtr<SecCodeRef> code = secCodeForProcess(pid);
Can use auto here.
Daniel Bates
Comment 4
2016-04-13 10:51:36 PDT
Committed
r199504
: <
http://trac.webkit.org/changeset/199504
>
Darin Adler
Comment 5
2016-04-13 16:56:59 PDT
Comment on
attachment 276332
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276332&action=review
> Source/WebKit2/Shared/mac/CodeSigning.mm:58 > + OSStatus errorCode = noErr; > + // FIXME: We should RELEASE_ASSERT() that SecCodeCopyGuestWithAttributes() returns without error. > + if ((errorCode = SecCodeCopyGuestWithAttributes(nullptr, attributes.get(), kSecCSDefaultFlags, &code))) { > + WTFLogAlways("SecCodeCopyGuestWithAttributes() failed with error: %ld\n", static_cast<long>(errorCode)); > + return nullptr; > + } > RELEASE_ASSERT(!SecCodeCopyGuestWithAttributes(nullptr, attributes.get(), kSecCSDefaultFlags, &code));
I don’t think you wanted to call this twice.
Daniel Bates
Comment 6
2016-04-13 20:21:55 PDT
(In reply to
comment #5
)
> > Source/WebKit2/Shared/mac/CodeSigning.mm:58 > > [...] > > RELEASE_ASSERT(!SecCodeCopyGuestWithAttributes(nullptr, attributes.get(), kSecCSDefaultFlags, &code)); > > I don’t think you wanted to call this twice.
Fixed in <
http://trac.webkit.org/changeset/199528
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug